--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -5,6 +5,7 @@
     </head>
 
     <body>
+        <button id="download">Download Log</button>
         <script src="/script.js"></script>
     </body>
 </html>
