--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -6,6 +6,6 @@
 
     <body>
         <button id="download">Download Log</button>
-        <script src="/script.js"></script>
+        <script src="/script2.js"></script>
     </body>
 </html>
